Add HTML documentation (printable to PDF) and custom domain setup
- Created HTML versions of all documentation (676KB total)
- Added CUSTOM_DOMAIN_SETUP.md for vmartai custom domain
- Added conversion scripts (convert_docs.sh, html_to_pdf.sh, etc.)
- HTML files are self-contained, styled, and print-ready
- Can be easily converted to PDF in any browser (Cmd+P → Save as PDF)
- Includes README explaining PDF conversion methods
- All documentation now available in both MD and HTML formats

--- a/com.vmart.aiagent.plist
+++ b/com.vmart.aiagent.plist
@@ -9,7 +9,7 @@
     <!-- Program to Run -->
     <key>ProgramArguments</key>
     <array>
-        <string>/usr/local/bin/python3</string>
+        <string>/Library/Frameworks/Python.framework/Versions/3.13/bin/python3</string>
         <string>/Users/dineshsrivastava/Ai Chatbot for Gemini LLM/V-Mart Personal AI Agent/main.py</string>
     </array>
     
