--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,10 @@ schedule==1.2.0
 pandas==2.1.4
 numpy==1.26.2
 
+# Excel and Office Document Support
+openpyxl==3.1.2
+python-pptx==0.6.23
+
 # Type Hints
 typing-extensions==4.9.0
 
