Add comprehensive backend manager system
- Database connectors: ClickHouse, PostgreSQL, Oracle, SQL Server
- Data source connectors: Tableau, Google Drive, File System
- AI insights engine with Gemini integration
- RBAC system with roles and permissions
- Configuration manager with encrypted credentials
- Central management API endpoints
- Complete documentation

Total: 11 backend modules, ~4,200 lines of code, 17 REST API endpoints

--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,12 @@ typing-extensions==4.9.0
 
 # Environment Variables
 python-dotenv==1.0.0
+
+# Database Connectors
+clickhouse-driver==0.2.6
+psycopg2-binary==2.9.9
+oracledb==2.0.1
+pyodbc==5.0.1
+
+# Security and Encryption
+cryptography==41.0.7
