--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ numpy==1.26.2
 # Excel and Office Document Support
 openpyxl==3.1.2
 python-pptx==0.6.23
+reportlab==4.0.7
+xlsxwriter==3.1.9
 
 # Type Hints
 typing-extensions==4.9.0
